Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/IndexArray.out
IndexArray.java:12:15: compiler.err.illegal.start.of.expr
1 error
